create new league, handle representative permissions, strat serach route
