# project/routes/utils/permission_representative.js
@@ -1,0 +1,11 @@
+// const classes = require("../../classes");
+// let flag = false;
+// const Representative_user = new classes.Member_User(user.username, user.permissions); 
+
+
+
+// function RepresentativePermission(){
+//     return Representative_user.permission;
+// }
+
+// exports.getRepresentativePermission= RepresentativePermission;
